[package]
name = "mdpreview"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
pulldown-cmark = "0.9"
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.5", features = ["fs"] }
tokio-tungstenite = "0.21"
futures = "0.3"

